Fix: "toolbar is too short (by a few pixels)" Nit #11 on http://bugs.activestate.com/show_bug.cgi?id=79721
(integrated from komodo (trunk) change 24133 by trentm)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@2327 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/toolbar.p.css
+++ b/src/chrome/komodo/skin/toolbar.p.css
@@ -48,6 +48,7 @@ hbox > toolbar > toolbarbutton[type="menu-button"] {
   padding-bottom: 0px;
 }
 
+/* TODO: I believe this production is cruft. */
 toolbar {
     border-right: 1px outset ThreeDHighlight;
 /* #if PLATFORM != "darwin" */
@@ -57,6 +58,8 @@ toolbar {
   
 toolbarbutton {
     -moz-box-orient: vertical;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 .toolbarbutton-text[buttonstyle="pictures"],
